# gst_works

gst-template-opencv/: README
gst-template-opencv/gst-plugin/: configure.ac
gst-template-opencv/gst-plugin/src/: Makefile.am  gstmyplugin.cc  gstmyplugin_3pm_8thjan.cc  gstmyplugin_opencvapi.cc  gstmyplugin_working_image_8th_jan.cc  libgstmyplugin.la
